--- a/app/src/main/res/layout/list_item_company.xml
+++ b/app/src/main/res/layout/list_item_company.xml
@@ -9,13 +9,41 @@
         android:id="@+id/company_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Company Name"/>
+        android:text="Company Name"
+        android:textStyle="bold"
+        android:textColor="#463C3C"
+        android:textSize="32dp"/>
 
     <TextView
+        android:id="@+id/company_tagline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tagline"
+        android:textStyle="italic"/>
+
+    <!--TextView
         android:id="@+id/company_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Incorporation Date"/>
+        android:text="Incorporation Date"/-->
 
+    <TextView
+        android:id="@+id/company_specialization"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Specialization"/>
+
+    <!--TextView
+        android:id="@+id/company_rating"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Current Rating"/-->
+
+    <TextView
+        android:id="@+id/company_size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Number of empolyees"
+        android:textColor="#463B72"/>
 
 </LinearLayout>
