--- a/app/src/main/res/layout/list_item_company_funded.xml
+++ b/app/src/main/res/layout/list_item_company_funded.xml
@@ -66,7 +66,7 @@
         android:layout_marginEnd="16dp"
         android:text="Specialization"
         android:textSize="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/company_size"
+        app:layout_constraintBottom_toTopOf="@+id/company_separator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/company_tagline" />
@@ -76,6 +76,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Current Rating"/-->
+    <View
+        android:id="@+id/company_separator"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginEnd="40dp"
+        android:background="#c0c0c0"
+        app:layout_constraintBottom_toTopOf="@+id/company_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/company_specialization" />
 
     <TextView
         android:id="@+id/company_size"
@@ -83,14 +95,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Number of empolyees"
-        android:textColor="#463B72"
-        android:textSize="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/company_funding_status"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="9dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/company_funding_status"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/company_specialization" />
+        app:layout_constraintTop_toBottomOf="@+id/company_separator" />
 
     <TextView
         android:id="@+id/company_funding_status"
@@ -98,14 +110,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Funded"
-        android:textStyle="bold"
-        android:textSize="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/company_num_investors"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/company_size" />
+        android:textSize="9dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/company_num_investors"
+        app:layout_constraintStart_toEndOf="@+id/company_size"
+        app:layout_constraintTop_toBottomOf="@+id/company_separator"
+        app:layout_constraintVertical_bias="0.028" />
 
     <TextView
         android:id="@+id/company_num_investors"
@@ -113,13 +126,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Number of Investors"
-        android:textStyle="bold"
-        android:textSize="12dp"
+        android:textSize="9dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/company_funding_status"/>
+        app:layout_constraintStart_toEndOf="@+id/company_funding_status"
+        app:layout_constraintTop_toBottomOf="@+id/company_separator"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
